# open-set-ids-nslkdd

./: .gitignore  QA.md  README.md  REPORT.md  cond_ood.py  data_utils.py  diag.py  diag_known.py  model.py  ood.py  openmax.py  pyproject.toml  search_fine.py  train.py
webapp/: app.py  infer.py
webapp/static/: app.js  index.html  style.css
